# renderer

./: Cargo.toml  README.md
res/objects/: ball1.json  ball2.json  ball3.json  floor.json  pyramid.json  triangle.json
src/: camera.rs  errors.rs  input.rs  main.rs  objects.rs  renderer.rs  util.rs  vector.rs  world.rs
