[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
crossbeam = "0.8.1"
num = "0.4.0"
num_cpus = "1.13.1"
pixels = "0.9.0"
rayon = "1.5.1"
rgb = { version = "0.8.31", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
winit = "0.26.1"
winit_input_helper = "0.11.0"


[profile.release] 
debug = true
